--- a/ourmenu/index.html
+++ b/ourmenu/index.html
@@ -24,7 +24,7 @@
     <div class="section-center">
       <!-- single item -->
       <article class="menu-item">
-        <img scr="menu-item.jpg" class="photo" alt="menu-item">
+        <img src="menu-item.jpeg" class="photo" alt="menu-item">
         <div class="item-info">
           <header>
             <h4>buttermilk pancakes</h4>
