--- a/ourmenu/index.html
+++ b/ourmenu/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starter</title>
+    <title>Menu</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -21,15 +21,15 @@
     </div>
     <!-- filter buttons -->
     <div class="btn-container">
-      <button class="filter-btn" type="button" data-id="all">all</button>
+      <!-- <button class="filter-btn" type="button" data-id="all">all</button>
       <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
       <button class="filter-btn" type="button" data-id="lunch">lunch</button>
-      <button class="filter-btn" type="button" data-id="shakes">shakes</button>
+      <button class="filter-btn" type="button" data-id="shakes">shakes</button> -->
     </div>
     <!-- menu buttons -->
     <div class="section-center">
       <!-- single item -->
-      <article class="menu-item">
+      <!-- <article class="menu-item">
         <img src="menu-item.jpeg" class="photo" alt="menu-item">
         <div class="item-info">
           <header>
@@ -42,9 +42,8 @@
           special treat for me. The museum is so huge, you could spend weeks there.
         </p>
         </div>
-      </article>
+      </article> -->
       <!-- end of single item -->
-      
     </div>
   </section>
     <!-- javascript -->
