Finished homework for lesson#1

--- a/java_script_lessons/index_js_lesson_1.html
+++ b/java_script_lessons/index_js_lesson_1.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>$Title$</title>
+  <script src="hw_js_lesson_1.js"></script>
 </head>
 <body>
-$END$
+
 </body>
 </html>
