--- a/java_script_lessons/index_lesson_3_add3.html
+++ b/java_script_lessons/index_lesson_3_add3.html
@@ -36,6 +36,6 @@
     </style>
 </head>
 <body>
-<script src="hw_js_lesson_3_add3_part2.js"></script>
+<!--<script src="hw_js_lesson_3_add3_part2.js"></script>-->
 </body>
 </html>
