--- a/java_script_lessons/index_lesson_6.html
+++ b/java_script_lessons/index_lesson_6.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <script src="hw_js_lesson_6.js"></script>
+<!--  <script src="hw_js_lesson_6.js"></script>-->
+    <script src="hw_js_lesson_6_additional_tasks.js"></script>
 </head>
 <body>
-
 </body>
 </html>
