--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
 </head>
 <body>
 <nav>
-    <h2>The Nav</h2>
-    <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Services</li>
-        <li>Work</li>
+    <h2 class="logo">The Nav</h2>
+
+    <ul class="navList">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Contacts</a></li>
     </ul>
+
+    <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+    </div>
 </nav>
+<script src="app.js"></script>
 </body>
 </html>
